--- a/Espinoza_Dayanna.html
+++ b/Espinoza_Dayanna.html
@@ -223,7 +223,7 @@
         <h4>Imagen Corporativa</h4>
         <p>En el símbolo se utilizó para transmitir la tecnología y el equipo de trabajo altamente capacitado con el que “PADARIKEIS” cuenta para ofrecer soluciones integrales a vehículos modernos. El color azul simboliza la innovación y la tecnología, mientras que el color naranja representa la pasión que cada uno de nuestros trabajadores sienten por la mecánica La fuente tipográfica que se utiliza es en honor al inventor, ingeniero mecánico, eléctrico y físico de origen serbio Nikola Tesla quien es una fuente de inspiración y admiración para los fundadores de la empresa.</p>
 
-        <p style="text-align:center; "> <img src="./img/logo.png" alt="Imagen Corporativa" width="400" height="330"/> </p>
+        <p style="text-align:center; "> <img src="./img/logo.jpg" alt="Imagen Corporativa" width="400" height="330"/> </p>
         </article>
     </section>
 
